service.yml
apiVersion: v1
kind: Service
metadata:
  name: qb-service
  labels:
    app: qb
    visualize: "true"
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 80
  selector:
    app: product
