ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qb-localhost
spec:
  backend:
    serviceName: qb-service
    servicePort: 80
